chore(cicd): change name labels

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -6,7 +6,7 @@ jobs:
 
   # -- LINT -------------------------------------------------------------------
   tflint:
-    name: runner / tflint
+    name: TFLint
     runs-on: ubuntu-latest
 
     steps:
@@ -34,7 +34,7 @@ jobs:
 
   # -- SECURITY ---------------------------------------------------------------
   tfsec:
-    name: runner / tfsec
+    name: TFSec
     runs-on: ubuntu-latest
 
     steps:
